# gta-api-sw-provider

./: .gitignore  README.md  REUSE.toml  SECURITY.md  meson.build  meson_options.txt  sonar-project.properties
.github/workflows/: jwt.yml  lib.yml  main.yml  sonar.yml
cross-files/: aarch64-linux-gnu.txt
doc/: profile_ch.iec.30168.basic.local_data_integrity_only.md  profile_ch.iec.30168.basic.local_data_protection.md  profile_ch.iec.30168.basic.passcode.md  profile_com.github.generic-trust-anchor-api.basic.dilithium.md  profile_com.github.generic-trust-anchor-api.basic.ec.md  profile_com.github.generic-trust-anchor-api.basic.enroll.md  profile_com.github.generic-trust-anchor-api.basic.jwt.md  profile_com.github.generic-trust-anchor-api.basic.rsa.md  profile_com.github.generic-trust-anchor-api.basic.tls.md  profile_template.md
examples/: meson.build
examples/local_data_protection/: main.c  myio_filestream.h
src/: gta_debug.h  gta_sw_provider.c  gta_sw_provider.h  helper_functions.c  helper_functions.h  key_management.c  key_management.h  meson.build  persistent_storage.c  persistent_storage.h  provider_data_model.c  provider_data_model.h
src/profiles/: prof_ch_iec_30168_basic_local_data_integrity_only.c  prof_ch_iec_30168_basic_local_data_protection.c  prof_ch_iec_30168_basic_passcode.c  prof_com_github_generic_trust_anchor_api_basic_dilithium.c  prof_com_github_generic_trust_anchor_api_basic_ec.c  prof_com_github_generic_trust_anchor_api_basic_enroll.c  prof_com_github_generic_trust_anchor_api_basic_jwt.c  prof_com_github_generic_trust_anchor_api_basic_rsa.c  prof_com_github_generic_trust_anchor_api_basic_signature.c  prof_com_github_generic_trust_anchor_api_basic_tls.c  prof_helper_functions.c  prof_helper_functions.h  prof_org_opcfoundation_ecc_nistp256.c
subprojects/: cmocka.wrap  openssl.wrap  qcbor.wrap  t_cose.wrap
subprojects/packagefiles/qcbor/: meson.build
subprojects/packagefiles/t_cose/: meson.build  meson_options.txt
test/: main.c  meson.build  myio_filestream.c  myio_filestream.h
test/testdata/: test_jwt_input.txt  testfile.txt
