#;**********************************************************************;
# SPDX-License-Identifier: MPL-2.0
#
# Copyright (c) 2024, Siemens AG
#
#;**********************************************************************;

option('build-dependencies', type : 'boolean', value : true, yield: true, description : 'Select whether to build dependencies locally rather than use system installed libraries.')